# routes/api/categories.js
@@ -4,10 +4,10 @@ const category  = require(path.resolve(CONTROLLER_DIR, 'category'));
 
 const router = require('express').Router()
 
-const {authenticationMiddleware,authorizaritionMiddleware} = require(path.resolve(UTIL_DIR,'middleware','authmiddleware'))
+const {authenticationMiddleware,authorizationMiddleware} = require(path.resolve(UTIL_DIR,'middleware','authmiddleware'))
 router.get('/' ,authenticationMiddleware, category.search)
-router.post('/' ,authenticationMiddleware,authorizaritionMiddleware(['admin','expert']) ,category.create)
+router.post('/' ,authenticationMiddleware,authorizationMiddleware(['admin','expert']) ,category.create)
 router.get('/:id' , authenticationMiddleware ,category.find)
-router.patch('/:id',authenticationMiddleware , authorizaritionMiddleware(['admin','expert']),category.update)
-router.delete("/:id", authenticationMiddleware,authorizaritionMiddleware(['admin','expert']),category.delete )
+router.patch('/:id',authenticationMiddleware , authorizationMiddleware(['admin','expert']),category.update)
+router.delete("/:id", authenticationMiddleware,authorizationMiddleware(['admin','expert']),category.delete )
 module.exports= router
